test/MC/SVE/regression-tests/negative_tests/sve-ld1b-006.s
// RUN: not llvm-mc -triple=aarch64-none-linux-gnu -show-encoding -mattr=+sve  2>&1 < %s| FileCheck %s
// VecU32CLoad1LSSZ
// Offset register Rm cannot be xzr
ld1b z26.s, p4/z, [x26, xzr]
// CHECK: {{(error\:\ index\ must\ be\ an\ integer\ in\ range)|(error\:\ index\ must\ be\ a\ multiple\ of)}}
